--- a/src/ui/interaction/ToggleBar/ToggleBar.scss
+++ b/src/ui/interaction/ToggleBar/ToggleBar.scss
@@ -4,7 +4,7 @@
   position: relative;
   overflow: auto hidden;
   max-width: 100%;
-  height: 36px;
+  min-height: 36px;
   border: 2px solid var(--color-80);
   border-radius: 18px;
 }
