--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -74,6 +74,11 @@
   --color-positive-100: #abe0c2;
 
   // Theme colors
+  --color-surface-gray: #fefefe;
+  --color-surface-blue: #f8f9ff;
+  --color-surface-purple: #f9f6ff;
+  --color-surface-yellow: #fff9f5;
+  --color-surface-green: #f7fffb;
 
   --color-link-dark: #1565fb;
   --color-red-light: #f74879;
