--- a/src/ui/layout/Navigation/Navigation.scss
+++ b/src/ui/layout/Navigation/Navigation.scss
@@ -11,8 +11,9 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  gap: 4px;
   font-size: 32px;
+  font-weight: bold;
+  font-style: italic;
 }
 
 .submenu {
@@ -27,6 +28,8 @@
   flex-direction: column;
   overflow: hidden;
   visibility: hidden;
+  margin-top: calc(var(--ui-flex-gap) * -1 + 8px);
+  margin-bottom: -8px;
 }
 
 .link {
