--- a/src/ui/popups/Drawer/Drawer.scss
+++ b/src/ui/popups/Drawer/Drawer.scss
@@ -16,7 +16,6 @@
   bottom: var(--ui-drawer-bottom);
   cursor: default;
   box-sizing: border-box;
-  overflow: auto;
   box-shadow: 0 0 10px 1px rgba(34, 34, 34, 0.15);
   border: 1px solid var(--color-90);
 }
@@ -29,4 +28,23 @@
 .hide {
   opacity: 0;
   transform: var(--ui-drawer-transform);
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  display: flex;
+  top: 12px;
+  right: -21px;
+  background: var(--color-primary-90);
+  color: var(--color-100);
+  padding: 17px;
+  border-radius: 50%;
 }
