--- a/src/ui/interaction/Upload/Upload.scss
+++ b/src/ui/interaction/Upload/Upload.scss
@@ -12,13 +12,13 @@
   background: var(--color-100);
   border: 1px solid var(--color-primary-50);
   border-radius: 10px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
   transition: border .3s;
   cursor: pointer;
 }
 
 .error {
-  border-color: var(--color-red);
+  border-color: var(--color-negative-50);
 }
 
 .clear {
@@ -165,5 +165,30 @@
 
   :global(.drag-over) & {
     border-color: var(--color-link-dark);
+  }
+}
+
+.hint {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  font-size: 12px;
+  color: var(--color-50);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 4px;
+  max-width: 100%;
+  box-sizing: border-box;
+  opacity: 1;
+  transition: opacity .3s, padding-left .3s;
+
+  &:empty {
+    padding-left: 13px;
+    opacity: 0;
+  }
+
+  .error > & {
+    color: var(--color-negative-50);
   }
 }
