--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -11,6 +11,8 @@
   transform: translateZ(50px);
   box-shadow: 0 0 30px -10px rgba(109, 109, 109, 0);
   text-decoration: none;
+  width: var(--ui-card-width, auto);
+  height: var(--ui-card-height, auto);
 
   @include skeletonAfter(-1px);
 }
