--- a/src/ui/popups/Popout/Popout.scss
+++ b/src/ui/popups/Popout/Popout.scss
@@ -69,6 +69,7 @@
     top: calc(var(--ui-popout-top) * -1);
     left: calc(var(--ui-popout-left) * -1);
     opacity: 0;
+    transition: all .3s;
   }
 }
 
