--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -114,6 +114,12 @@
     content: ' *';
     display: inline;
     color: var(--color-negative-50);
+    opacity: 0;
+    transition: opacity .3s;
+  }
+
+  .root:not(.error) &:after {
+    opacity: 1;
   }
 }
 
