--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -73,10 +73,12 @@
   .withLabel > & {
     margin: 12px 0 0;
     opacity: 0;
+    pointer-events: none;
 
     &:not([data-value='']),
     &:focus {
       opacity: 1;
+      pointer-events: all;
     }
   }
 
