--- a/src/ui/buttons/Buttons/Buttons.scss
+++ b/src/ui/buttons/Buttons/Buttons.scss
@@ -1,9 +1,11 @@
 .root {
+  background: var(--ui-buttons-background, transparent);
+
   form > &:last-child {
-    margin-top: 48px;
+    --ui-buttons-background: linear-gradient(to bottom, transparent -8px, var(--color-100) 48px);
+
+    padding-top: 48px;
     position: sticky;
     bottom: 0;
-    background: var(--color-100);
-    box-shadow: 0 0 30px 30px var(--color-100);
   }
 }
