--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,4 +4,6 @@
   --ui-over-z-index: 999;
   --ui-skeleton-color-base: var(--color-90);
   --ui-skeleton-color-shine: var(--color-primary-100);
+
+  --ui-color-separator: var(--color-90);
 }
