--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -1,7 +1,7 @@
 @import "src/styles/skeleton";
 
 .root {
-  border: 1px solid var(--color-70);
+  border: 1px solid var(--ui-color-separator);
   border-radius: var(--round-50);
   background-color: var(--color-100);
   transition: all .3s;
