--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -29,7 +29,7 @@
 .border {
   position: absolute;
   inset: 0;
-  border: 1px solid var(--color-80);
+  border: 1px solid var(--ui-color-separator);
   border-radius: var(--round-50);
   pointer-events: none;
   transition: border-color .3s;
