--- a/src/ui/interaction/Calendar/Calendar.scss
+++ b/src/ui/interaction/Calendar/Calendar.scss
@@ -36,13 +36,20 @@
   }
 }
 
+.gridWrapper {
+  overflow: hidden;
+  height: 288px;
+}
+
 .grid {
+  transition: top .3s;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  position: relative;
 }
 
 .cell {
-  transition: background-color .3s;
+  transition: background-color .3s, color .3s;
   text-align: center;
   padding: 14px 0;
   color: var(--color-50);
