--- a/src/ui/interaction/CalendarTitle/CalendarTitle.scss
+++ b/src/ui/interaction/CalendarTitle/CalendarTitle.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 16px;
+  margin: 16px 0;
   position: relative;
 }
 
