--- a/src/ui/interaction/CalendarTitle/CalendarTitle.scss
+++ b/src/ui/interaction/CalendarTitle/CalendarTitle.scss
@@ -26,6 +26,19 @@
   border: none;
   background: none;
 
+  &:hover {
+    color: var(--color-secondary-70);
+  }
+
+  &:focus {
+    outline: none;
+    color: var(--color-warning-50);
+  }
+
+  &:active {
+    color: var(--color-secondary-40);
+  }
+
   &.rotationTop {
     transform: translate(-50%, -100%);
   }
@@ -58,6 +71,11 @@
   font: inherit;
   border: none;
   background: none;
+
+  &:focus {
+    outline: none;
+    color: var(--color-warning-50);
+  }
 
   & ~ & {
     left: auto;
