--- a/src/ui/layout/Navigation/Navigation.scss
+++ b/src/ui/layout/Navigation/Navigation.scss
@@ -26,6 +26,7 @@
   min-height: 0;
   gap: 4px;
   font-size: 75%;
+  font-weight: 700;
   flex-direction: column;
   overflow: hidden;
   visibility: hidden;
