--- a/src/ui/popups/Modal/Modal.scss
+++ b/src/ui/popups/Modal/Modal.scss
@@ -49,8 +49,8 @@
 }
 
 .content {
-  margin: 38px 4px;
-  padding: 0 38px;
+  margin: 0 4px 24px;
+  padding: 0 20px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -71,7 +71,7 @@
   z-index: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 38px;
+  padding: 24px;
   font-size: 32px;
   font-weight: bold;
   min-height: 1em;
