--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -20,13 +20,19 @@ html,body {
 }
 
 a {
-  color: var(--color-10);
-  text-decoration-thickness: 1px;
-  text-underline-position: under;
+  transition: color .3s;
+  color: var(--color-secondary-50);
+  text-decoration: none;
   cursor: pointer;
 
   &:hover {
-    color: var(--color-link-dark);
-    text-decoration: none;
+    color: var(--color-secondary-70);
+  }
+  &:focus {
+    color: var(--color-warning-50);
+    outline: none;
+  }
+  &:active {
+    color: var(--color-secondary-40);
   }
 }
