--- a/src/ui/popups/DatePicker/DatePicker.scss
+++ b/src/ui/popups/DatePicker/DatePicker.scss
@@ -2,6 +2,32 @@
 
 }
 
+.contentHeader {
+  border-bottom: 1px solid var(--ui-color-separator);
+}
+
+.contentHeaderButton {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  background: none;
+  border: none;
+  font: inherit;
+  color: var(--color-secondary-50);
+  cursor: pointer;
+
+  &:hover {
+    color: var(--color-secondary-70);
+  }
+  &:focus {
+    color: var(--color-warning-50);
+    outline: none;
+  }
+  &:active {
+    color: var(--color-secondary-40);
+  }
+}
+
 .cell {
   cursor: pointer;
 }
@@ -14,36 +40,31 @@
 
 .contentWrapper {
   transition: opacity .3s, transform .3s;
-  height: 516px;
   opacity: 0;
-  transform: translateX(100%);
+  transform: translateX(-100%);
 
-  &.date {
-    transform: translateX(-100%);
+  &.rightContent {
+    transform: translateX(100%);
   }
 }
 
 .contentShow {
-  &.date,
-  &.month,
-  &.year, {
+  &, &.rightContent, {
     opacity: 1;
     transform: translateX(0);
   }
 }
 
 .contentHide {
-  &.date,
-  &.month,
-  &.year, {
+  transform: translateX(-100%);
+
+  &, &.rightContent {
     opacity: 0;
     position: absolute;
     width: calc(100% - 48px);
   }
-  &.date {
-    transform: translateX(-100%);
-  }
-  &.year {
+
+  &.rightContent {
     transform: translateX(100%);
   }
 }
