--- a/src/ui/popups/DatePicker/DatePicker.scss
+++ b/src/ui/popups/DatePicker/DatePicker.scss
@@ -67,6 +67,8 @@
 
 .content {
   top: 0;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   position: relative;
 }
@@ -75,6 +77,9 @@
   transition: opacity .3s, transform .3s;
   opacity: 0;
   transform: translateX(-100%);
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 
   &.rightContent {
     transform: translateX(100%);
@@ -94,7 +99,8 @@
   &, &.rightContent {
     opacity: 0;
     position: absolute;
-    width: calc(100% - 48px);
+    width: calc(100% - 40px);
+    height: 100%;
   }
 
   &.rightContent {
@@ -106,7 +112,8 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  height: 436px;
+  flex: 1;
+  flex-basis: 436px;
 }
 
 .monthGrid {
