--- a/src/ui/layout/Image/Image.scss
+++ b/src/ui/layout/Image/Image.scss
@@ -5,4 +5,6 @@
   border-radius: var(--ui-image-radius);
   background-size: cover;
   overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
 }
