--- a/src/ui/interaction/Upload/Upload.scss
+++ b/src/ui/interaction/Upload/Upload.scss
@@ -10,7 +10,7 @@
   height: 112px;
   gap: 12px;
   background: var(--color-100);
-  border: 1px solid var(--color-80);
+  border: 1px solid var(--ui-color-separator);
   border-radius: 10px;
   margin-bottom: 24px;
   transition: border .3s;
