--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -2,7 +2,7 @@
 
 .root {
   border: 1px solid var(--ui-color-separator);
-  border-radius: var(--round-50);
+  border-radius: var(--ui-card-radius, var(--round-50));
   background-color: var(--color-100);
   transition: all .3s;
   max-width: 100%;
