--- a/src/ui/interaction/Stories/Stories.scss
+++ b/src/ui/interaction/Stories/Stories.scss
@@ -22,6 +22,10 @@
   user-select: none;
 }
 
+.popoutContent {
+  background: transparent;
+}
+
 .slide {
   width: 100%;
   transition: background .5s;
