--- a/src/ui/interaction/Stories/Stories.scss
+++ b/src/ui/interaction/Stories/Stories.scss
@@ -20,10 +20,7 @@
 
 .slides {
   user-select: none;
-}
-
-.popoutContent {
-  background: transparent;
+  background: var(--color-0);
 }
 
 .slide {
