--- a/src/ui/interaction/Radiobox/Radiobox.scss
+++ b/src/ui/interaction/Radiobox/Radiobox.scss
@@ -35,7 +35,9 @@
   }
 
   .input:focus + & {
-    border-color: var(--color-warning-50);
+    :global(.tab) & {
+      border-color: var(--color-warning-50);
+    }
   }
 
   .checked & {
