--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -29,8 +29,11 @@ a {
     color: var(--color-secondary-70);
   }
   &:focus {
-    color: var(--color-warning-50);
     outline: none;
+
+    :global(.tab) & {
+      color: var(--color-warning-50);
+    }
   }
   &:active {
     color: var(--color-secondary-40);
