--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -2,7 +2,7 @@
 
 .root {
   outline: 1px solid transparent;
-  transition: background-color .3s, border-color .3s, opacity .3s, outline .3s;
+  transition: background-color .3s, border-color .3s, opacity .3s, box-shadow .3s;
   border: 1px solid var(--color-primary-50);
   background-color: var(--color-primary-50);
   border-radius: var(--round-50);
@@ -85,8 +85,12 @@
 }
 
 .root:focus {
-  outline: 1px solid var(--color-warning-50);
-  border-color: var(--color-warning-50);
+  outline: none;
+
+  :global(.tab) & {
+    box-shadow: inset 0 0 0 1px var(--color-warning-50);
+    border-color: var(--color-warning-50);
+  }
 }
 
 .loading {
