--- a/src/ui/interaction/Checkbox/Checkbox.scss
+++ b/src/ui/interaction/Checkbox/Checkbox.scss
@@ -29,7 +29,9 @@
   }
 
   .input:focus + & {
-    border-color: var(--color-warning-50);
+    :global(.tab) & {
+      border-color: var(--color-warning-50);
+    }
   }
 
   .checked & {
@@ -39,8 +41,6 @@
 
   .checked:hover & {
     background: var(--color-primary-30);
-  }
-  .checked:hover .input:not(:focus) + & {
     border-color: var(--color-primary-30);
   }
 
