--- a/src/ui/interaction/Toggle/Toggle.scss
+++ b/src/ui/interaction/Toggle/Toggle.scss
@@ -30,7 +30,9 @@
   }
 
   .input:focus + & {
-    border-color: var(--color-warning-50);
+    :global(.tab) & {
+      border-color: var(--color-warning-50);
+    }
   }
 
   .checked & {
@@ -40,8 +42,6 @@
 
   .checked:hover & {
     background: var(--color-primary-40);
-  }
-  .checked:hover .input:not(:focus) + & {
     border-color: var(--color-primary-40);
   }
 
