--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,6 @@
 h1, h2, h3, h4, h5 {
   font-weight: bold;
+  margin: 24px 0;
 }
 
 h1 {
@@ -7,19 +8,22 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
-  margin: 32px 0;
+  font-size: 32px;
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 24px;
 }
 
 h4 {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 h5 {
+  font-size: 16px;
+}
+
+h6 {
   font-size: 14px;
 }
 
