--- a/src/ui/buttons/Button/Button.scss
+++ b/src/ui/buttons/Button/Button.scss
@@ -17,6 +17,9 @@
   line-height: 14px;
   box-sizing: content-box;
   color: var(--color-100);
+  font-weight: normal;
+  font-style: normal;
+  text-transform: none;
 
   @include skeletonAfter(-1px);
 }
