--- a/src/ui/popups/Modal/Modal.scss
+++ b/src/ui/popups/Modal/Modal.scss
@@ -11,6 +11,7 @@
   transform: translateX(-50%) translateY(-50%) rotateX(20deg) scale(0.7);
   opacity: 0;
   width: calc(100% - 20px);
+  height: var(--ui-modal-height);
   max-width: var(--ui-modal-width);
   max-height: calc(100% - 20px);
   overscroll-behavior: none;
