--- a/src/ui/layout/Navigation/Navigation.scss
+++ b/src/ui/layout/Navigation/Navigation.scss
@@ -41,7 +41,7 @@
 }
 
 .linkActive {
-  color: var(--color-secondary-50);
+  color: var(--color-primary-50);
 
   & + .submenu {
     visibility: visible;
