--- a/src/ui/typography/Title/Title.scss
+++ b/src/ui/typography/Title/Title.scss
@@ -14,3 +14,12 @@
 .hide {
   transform: translateX(-10px);
 }
+
+.subTitle {
+  color: var(--color-50);
+  width: 100%;
+  font-size: 16px;
+  font-style: normal;
+  text-transform: none;
+  font-weight: normal;
+}
