--- a/src/ui/popups/Modal/Modal.scss
+++ b/src/ui/popups/Modal/Modal.scss
@@ -47,15 +47,24 @@
   transform: translateX(-50%) translateY(-50%) rotateX(-10deg) scale(1.3) !important;
 }
 
+.noTitle {
+  .header {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+  }
+}
+
 .content {
-  margin: 0 4px 24px;
+  margin: 24px 4px;
   padding: 0 20px;
   flex: 1;
   display: flex;
   flex-direction: column;
   overflow: auto;
 
-  .header ~ & {
+  .root:not(.noTitle) .header ~ & {
     margin-top: 0;
   }
 }
