--- a/src/ui/interaction/Input/Input.scss
+++ b/src/ui/interaction/Input/Input.scss
@@ -114,7 +114,7 @@
     font-size: 12px;
   }
 
-  .input[required] ~ &:after {
+  .input[required] ~ &.labelStar:after {
     content: ' *';
     display: inline;
     color: var(--color-negative-50);
@@ -122,7 +122,7 @@
     transition: opacity .3s;
   }
 
-  .root:not(.error) &:after {
+  .root:not(.error) &.labelStar:after {
     opacity: 1;
   }
 }
