--- a/src/ui/popups/Notifications/Notifications.scss
+++ b/src/ui/popups/Notifications/Notifications.scss
@@ -9,7 +9,7 @@
   right: 30%;
   width: 40%;
   top: 0;
-  z-index: 999;
+  z-index: calc(var(--ui-over-z-index) + 1);
   perspective: 250px;
   transform-origin: top center;
   pointer-events: none;
