--- a/src/ui/cards/Card/Card.scss
+++ b/src/ui/cards/Card/Card.scss
@@ -27,13 +27,14 @@
   opacity: 1;
   box-shadow: 0 0 0 0 rgba(109, 109, 109, 0.5);
   transform: translateZ(0);
+  transition-delay: var(--ui-cards-delay, 0s);
 
   &:nth-child(odd) {
-    transition: all .3s .1s;
+    transition-delay: var(--ui-cards-delay, .1s);
   }
 
   &:nth-child(3n) {
-    transition: all .3s .2s;
+    transition-delay: var(--ui-cards-delay, .2s);
   }
 }
 
@@ -46,13 +47,14 @@
 .hide {
   opacity: 0;
   transform: translateZ(50px);
+  transition: all var(--ui-cards-delay, 0s);
 
   &:nth-child(odd) {
-    transition: all .1s;
+    transition: all var(--ui-cards-delay, .1s);
   }
 
   &:nth-child(3n) {
-    transition: all .2s;
+    transition: all var(--ui-cards-delay, .2s);
   }
 }
 
