--- a/src/ui/buttons/BurgerButton/BurgerButton.scss
+++ b/src/ui/buttons/BurgerButton/BurgerButton.scss
@@ -8,17 +8,28 @@
   border-radius: 50%;
   padding: calc(var(--ui-burger-button-size) - 1px);
   display: flex;
+  transition: background-color .3s, border-color .3s, box-shadow .3s, color .3s;
+  box-shadow: inset 0 0 0 1px transparent;
 
-  &:focus,
-  &:hover {
-
+  @media (pointer: fine) {
+    &:hover {
+      background: var(--color-primary-90);
+      border-color: var(--color-primary-90);
+      color: var(--color-100);
+    }
+    &:active {
+      background: var(--color-primary-50);
+      border-color: var(--color-primary-50);
+      color: var(--color-100);
+    }
   }
 
   &:focus {
     outline: none;
-  }
 
-  &:active {
-
+    :global(.tab) & {
+      border-color: var(--color-warning-50);
+      box-shadow: inset 0 0 0 1px var(--color-warning-50);
+    }
   }
 }
